[metadata]
name = eos-metrics-proxy
version = 0.1.0
description = Receive Endless OS metrics requests
long_description = file: README.md
long_description_content_type = text/markdown
author = Mathieu Bridon
author_email = mathieu@endlessm.com
url = https://github.com/endlessm/eos-metrics-proxy
classifiers =
    Environment :: Web Environment
    Framework :: AsyncIO
    License :: License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3 :: Only
    Typing :: Typed
license = AGPL-3.0-or-later
license_file = COPYING

[options]
packages = find:
python_requires = >= 3.7

[options.package_data]
eos_metrics_proxy = py.typed
