[metadata]
name = eos-metrics-proxy
version = 0.1.0
description = Receive Endless OS metrics requests
long_description = file: README.md
long_description_content_type = text/markdown
author = Mathieu Bridon
author_email = mathieu@endlessm.com
url = https://github.com/endlessm/eos-metrics-proxy
classifiers =
    Environment :: Web Environment
    Framework :: AsyncIO
    License :: License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3 :: Only
    Typing :: Typed
license = AGPL-3.0-or-later
license_file = COPYING

[options]
packages = find:
python_requires = >= 3.7

[options.package_data]
eos_metrics_proxy = py.typed

[coverage:run]
branch = True
omit =
    eos_metrics_proxy/__main__.py
    eos_metrics_proxy/tests/*
source =
    eos_metrics_proxy

[coverage:report]
show_missing = true

[mypy]
disallow_untyped_defs = True
warn_redundant_casts = True
warn_unused_ignores = True

[mypy-eos_metrics_proxy.tests.*]
disallow_untyped_defs = False

[tool:pytest]
flake8-max-line-length = 100
filterwarnings =
    error::DeprecationWarning:eos_metrics_proxy.*
